syntax="proto3";

import "authentication/login_validation.proto";

option go_package="/model";

package model;

service AuthenticationService{
    rpc ValidateLogin(LoginValidationRequest) returns(LoginValidationResponse);
}

